# learners

./: .env.sample  .flaskenv  .gitignore  .pre-commit-config.yaml  Containerfile  MANIFEST.in  README.md  app.py  compose.yml  config.full.yml  config.yml  cpm_tracker.db  dev-backend.sh  entrypoint.sh  frontend_config.yml  learners.py  learners_config.yml  project_requirements.md  pyproject.toml  render_content.py  requirements.txt  run_cpm.sh  setup.cfg  temp_htpasswd  tox.ini  wsgi.py
.github/workflows/: build.yaml  cicd.yaml  lint.yaml
backend/: __init__.py  database.py  jwt_manager.py  logger.py
backend/classes/: SSE.py  SSE_element.py  SubmissionResponse.py  Tab.py  sse.py
backend/conf/: admin.py  config.py  config_schema.py  db_models.py
backend/functions/: database.py  execution.py  helpers.py  results.py
backend/routes/: __init__.py  admin.py  authentication.py  cache.py  callback.py  comment.py  comments.py  execution.py  executions.py  exercises.py  home.py  interface.py  notification.py  notifications.py  pages.py  questionaires.py  questionnaires.py  results.py  setup.py  statics.py  stream.py  users.py
backend/static/css/: _base.scss
backend/static/js/: main.js  notification.js
backend/templates/: base.html  index.html  questionaires_overview.html  questionaires_single.html  results_execution_details.html  results_overview.html
backend/templates/partials/: include_scripts.html  tab.html
docker/: compose.yml
docker/learners/: Containerfile  Dockerfile  entrypoint.sh
docker/learners/__data/: config.yml
docker/learners/data/: config.yml
docker/nginx/: nginx.conf
frontend/: package.json  vite.config.ts
frontend/src/: axios.ts  main.ts
frontend/src/components/: LoginForm.vue  LogoutForm.vue  Mainpage.vue  Sidebar.vue
frontend/src/components/admin/: AdminArea.vue  ExerciseCard.vue  ExercisesOverview.vue  FeedbackOverview.vue  NotificationsOverview.vue  PagesOverview.vue  QuestionaireCard.vue  QuestionaireOverview.vue  QuestionnaireOverview.vue  SubmissionCard.vue  SubmissionsOverview.vue  VisibilityOverview.vue
frontend/src/components/dynamic-components/: SvgIcon.vue
frontend/src/components/general/: FramePager.vue  PageTree.vue
frontend/src/components/sub-components/: DataTable.vue  Error.vue  Loader.vue  Notification.vue  (+6 more)
frontend/src/helpers/: index.ts
frontend/src/plugins/: index.ts  vuetify.ts  webfontloader.ts
frontend/src/router/: index.ts
frontend/src/scss/: main.scss  settings.scss
frontend/src/store/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
frontend/src/types/: index.ts
frontend/src/views/: Mainpage.vue
learners/: __init__.py  __main__.py  assets.py  config.py  database.py  helpers.py  jwt.py  jwt_manager.py  learners_tracker.db  logger.py  mail_manager.py  socketio.py  views.py
learners/conf/: admin.py  authentication.py  config.py  config_schema.py  db_models.py  jwt_manager.py
learners/functions/: database.py  execution.py  helpers.py  results.py
learners/routes/: __init__.py  admin.py  authentication.py  callback.py  comment.py  execution.py  home.py  interface.py  live.py  notification.py  screensharing.py  statics.py
learners/static/: _admin.scss  _base.scss  _branding.scss  _colors_light.scss  _variables.scss  exercisesX  learners_behavior.js  main_dark.scss  main_light.scss
learners/static/css/: _admin.scss  _base.scss  _chat.scss  _screensharing.scss  _sidebar.scss  theme_dark.scss  theme_iaea.scss  theme_light.scss
learners/static/js/: jitsi_handling.js  learners_behavior.js  live.js  main.js  notification.js  webrtc.js
learners/static/js-libs/: jitsi_external_api.js  webrtc-adapter-8.1.2.js
learners/templates/: admin.html  admin_notification.html  base.html  comments.html  index.html  login.html  questionaires_overview.html  questionaires_single.html  result_details.html  results.html  results_details.html  results_execution_details.html  results_overview.html  results_single.html
learners/templates/branding/: iaea_login.html  iaea_logo.html
learners/templates/partials/: branding.html  include_scripts.html  include_svglib.html  logo.html  nav.html  tab.html
learners_backend/: __init__.py  __main__.py  database.py  jwt_manager.py
learners_backend/classes/: Tab.py
learners_backend/conf/: admin.py  config.py  config_schema.py  db_models.py  jwt_manager.py
learners_backend/functions/: database.py  execution.py  helpers.py  results.py
learners_backend/routes/: __init__.py  admin.py  authentication.py  callback.py  comment.py  execution.py  home.py  interface.py  notification.py  setup.py  statics.py
learners_backend/static/css/: _form.scss  theme.scss
learners_backend/templates/: results_overview.html  results_single.html  results_table.html
learners_backend/templates/partials/: logo.html
learners_data/: README.md  learners_config.yml  login.html  theme_iaea.scss
learners_frontend/: package.json  vite.config.ts
learners_frontend/src/: App.vue  axios.ts  main.ts
learners_frontend/src/components/: LoginForm.vue  Mainpage.vue  Sidebar.vue
learners_frontend/src/helpers/: index.ts
learners_frontend/src/plugins/: index.ts  vuetify.ts  vuex.ts  webfontloader.ts
learners_frontend/src/router/: index.ts
learners_frontend/src/scss/: main.scss  settings.scss
learners_frontend/src/store/: index.ts
learners_frontend/src/styles/: main.scss
learners_frontend/src/types/: index.ts
src/: app.py  config.py  database.py  jwt.py  views.py
src/templates/: index.html
src/templates/partials/: nav.html
static/: _base.scss  _chat.scss  _colors_dark.scss  _colors_light.scss  _form.scss  _sidebar.scss  cpm.js  learners_behavior.js  main_dark.scss
templates/: base.html  index.html  login.html
templates/partials/: branding.html  include_scripts.html  include_svglib.html  nav.html
util/: assets.py
(+13 files in other folders)
