[metadata]
name = Learners
version = 0.3.0
description = Webinterface for accessing CR exercises.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
author = Lenhard Reuter, Benjamin Akhras
url = http://github.com/ait-cs-IaaS/learners/
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GPL
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    antlr4-python3-runtime
    beautifulsoup4
    black
    blinker
    build
    certifi
    cffi
    charset-normalizer
    click
    colorama
    cryptography
    cssmin
    distlib
    filelock
    flake8
    Flask
    Flask-Assets
    Flask-Cors
    Flask-Environments
    Flask-JWT-Extended
    Flask-Mail
    Flask-SQLAlchemy
    greenlet
    gunicorn
    idna
    importlib-resources
    itsdangerous
    Jinja2
    libsass
    MarkupSafe
    mccabe
    mypy-extensions
    omegaconf
    packaging
    pathspec
    platformdirs
    pycodestyle
    pycparser
    PyJWT
    python-dateutil
    python-dotenv
    PyYAML
    requests
    six
    SQLAlchemy
    strictyaml
    urllib3
    webassets
    Werkzeug
    zipp

[flake8]
max-line-length = 142
