[metadata]
name = ait-learners
version = 0.6.4
description = Webinterface for accessing CR exercises.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
author = Lenhard Reuter, Benjamin Akhras
url = http://github.com/ait-cs-IaaS/learners/
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    antlr4-python3-runtime==4.11.1
    beautifulsoup4==4.11.1
    bidict==0.22.0
    black==22.8.0
    blinker==1.5
    build==0.8.0
    certifi==2022.9.24
    cffi==1.15.1
    charset-normalizer==2.1.1
    click==8.1.3
    colorama==0.4.5
    cryptography==38.0.1
    cssmin==0.2.0
    distlib==0.3.6
    dnspython==2.2.1
    eventlet==0.33.1
    filelock==3.8.0
    flake8==5.0.4
    Flask==2.2.2
    Flask-Assets==2.0
    Flask-Cors==3.0.10
    Flask-Environments==0.1
    Flask-JWT-Extended==4.4.4
    Flask-Mail==0.9.1
    Flask-SocketIO==5.3.1
    Flask-SQLAlchemy==2.5.1
    glob2==0.7
    greenlet==1.1.3
    gunicorn==20.1.0
    idna==3.4
    importlib-metadata==4.12.0
    importlib-resources==5.9.0
    itsdangerous==2.1.2
    Jinja2==3.1.2
    libsass==0.21.0
    MarkupSafe==2.1.1
    mccabe==0.7.0
    mypy-extensions==0.4.3
    omegaconf==2.2.3
    packaging==21.3
    pathspec==0.10.1
    platformdirs==2.5.2
    pycodestyle==2.9.1
    pycparser==2.21
    PyJWT==2.5.0
    python-dateutil==2.8.2
    python-dotenv==0.21.0
    python-engineio==4.3.4
    python-socketio==5.7.1
    PyYAML==6.0
    requests==2.28.1
    six==1.16.0
    SQLAlchemy==1.4.41
    strictyaml==1.6.1
    urllib3==1.26.12
    webassets==2.0
    Werkzeug==2.2.2
    zipp==3.8.1

[flake8]
max-line-length = 142
